--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -4,8 +4,10 @@ video guidance was adapted to suit my needs for the site. Also trying using vari
 body {
     
     font-family: 'Comic Neue', sans-serif;
+    box-sizing: border-box;
 	margin: 0;
     padding:0;
+    font-size: 16px;
 	width: 100vw;
     --color1: #ffbe0b;
     --color2: #fb5607;
@@ -15,5 +17,52 @@ body {
     background-color: var(--color1)
 
 }
+
+h1 {
+    font-size: 48px;
+    margin: 0;
+    color: var(--color4);
+}
+
+h2 {font-size: 32px;}
+
+.container {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 32px;
+}
+
+
+
+.flex-center {
+    justify-content: center;
+    align-items: center;
+
+}
+
+.flex-column {
+    display: flex;
+    flex-direction: column;
+
+}
+
+.justify-center {
+    justify-content: center;
+
+}
+
+.text-center {
+    text-align: center;
+}
+
+
+
+
+
 
 
