--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -60,8 +60,27 @@ h2 {font-size: 32px;}
     text-align: center;
 }
 
+.btn {
+    font-size: 38.4px;
+    padding: 32px 0px;
+    width: 480px;
+    margin: 32px;
+    text-decoration: underline;
+    color: var(--color4);
+    text-align: center;
+    border: 2px solid;
+    border-color: var(--color4);
 
+}
 
+.btn:hover {background-color: var(--color4);
+    color: var(--color1);
+  -webkit-transition: 1s ease;
+}
+
+.fa-message {font-size: 38.4px;
+             margin-left: 16px;
+}
 
 
 
