--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -119,7 +119,7 @@ h2 {font-size: 32px;}
 }
 
 .modal {
-
+    position: relative;
     height: 80%;
     width: 50%;
     padding: 1rem;
@@ -130,4 +130,16 @@ h2 {font-size: 32px;}
     background-color: white;
 }
 
+.modal-close{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    }
+
+.modal-close:hover {
+
+    
+    color: var(--color4);
+    cursor: pointer;
+}
 
