--- a/assets/CSS/game.css
+++ b/assets/CSS/game.css
@@ -1,5 +1,11 @@
+/* guidance on this code was taken from you tube video - https://www.youtube.com/watch?v=f4fB9Xg2JEY */
+
+
 body {color: var(--color2);}
 
+/* Questions box styles */
+
+/* Answers boxes styles  */
 
 .answer-container {
 display: flex;
@@ -15,6 +21,16 @@ min-width: 20em;
     cursor: pointer;
     box-shadow: 0.2rem 0.2rem 0.313rem 0.375rem var(--color5);
     transform: scale(1.5);
+}
+
+.answer-prefix {
+    padding: 32px 36px;
+    color: var(--color4);
+}
+
+.answer-text {
+    padding: 32px;
+    width: 66%;
 }
 
 
