--- a/assets/CSS/game.css
+++ b/assets/CSS/game.css
@@ -5,6 +5,19 @@ body {color: var(--color2);}
 
 /* Questions box styles */
 
+.question-container {
+
+display: flex;
+margin-bottom: 16px;
+width: 66%;
+border-radius: 4px;
+background: var(--color4);
+min-width: 20em;
+text-align: center;
+
+
+}
+
 /* Answers boxes styles  */
 
 .answer-container {
