feat: identified the use of each color var in comment on style.css and put in class identifier for change of color when question clicked.

--- a/assets/CSS/game.css
+++ b/assets/CSS/game.css
@@ -46,4 +46,14 @@ min-width: 20em;
     width: 66%;
 }
 
+.correct {
+    background: var(--color5);
+
+}
+
+.incorrect {
+    background: var(--color3);
+    
+}
+
 
