--- a/assets/CSS/game.css
+++ b/assets/CSS/game.css
@@ -75,3 +75,24 @@ min-width: 20em;
 .hud-main-text{
     color: var(--color2);
 }
+
+/* guidance on progress bars was taken from youtube video - https://www.youtube.com/watch?v=f4fB9Xg2JEY  and adapted for my project*/
+
+
+#progress-bar {
+    width: 66%;
+    height: 48px;
+    border: 6px solid var(--color4);
+    margin-top: 32px;
+    border-radius: 50px;
+    overflow: hidden;
+    margin-bottom: 32px;
+
+}
+
+#progressBarFull {
+    height: 100%;
+    background: var(--color4);
+    width: 0%;
+
+}
