--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -122,7 +122,6 @@ h2 {font-size: 32px;}
 }
 
 .con-active {
-
     visibility:visible;
     opacity: 1;
 }
@@ -150,5 +149,20 @@ h2 {font-size: 32px;}
     color: var(--color4);
     cursor: pointer;
     
+}
+
+.modal-rules{ 
+    position: fixed;
+    top: 0;
+    left:0;
+    width: 100%;
+    height: 100vh;
+    background-color: var(--color2);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0.5s ease, opacity 0.5s ease;
 }
 
