feat: added the important flag to con-active in css so that the modal for rules shows.

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -122,8 +122,8 @@ h2 {font-size: 32px;}
 }
 
 .con-active {
-    visibility:visible;
-    opacity: 1;
+    visibility:visible !important;
+    opacity: 1 !important;
 }
 
 .modal {
