--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -121,9 +121,25 @@ h2 {font-size: 32px;}
 
 }
 
+.modal-rules{ 
+    position: fixed;
+    top: 0;
+    left:0;
+    width: 100%;
+    height: 100vh;
+    background-color: var(--color2);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0.5s ease, opacity 0.5s ease;
+}
+
+
 .con-active {
-    visibility:visible !important;
-    opacity: 1 !important;
+    visibility:visible;
+    opacity: 1;
 }
 
 .modal {
@@ -151,18 +167,4 @@ h2 {font-size: 32px;}
     
 }
 
-.modal-rules{ 
-    position: fixed;
-    top: 0;
-    left:0;
-    width: 100%;
-    height: 100vh;
-    background-color: var(--color2);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    visibility: hidden;
-    opacity: 0;
-    transition: visibility 0.5s ease, opacity 0.5s ease;
-}
 
