--- a/assets/CSS/game.css
+++ b/assets/CSS/game.css
@@ -8,12 +8,15 @@ body {color: var(--color2);}
 .question-container {
 
 display: flex;
+align-items: center;
+padding: 2em;
 margin: 16px;
 margin-bottom: 16px;
-width: 66%;
+width: 80%;
 border-radius: 4px;
 background: var(--color4);
 min-width: 20em;
+min-height: 10em;
 text-align: center;
 
 }
@@ -33,7 +36,7 @@ min-width: 20em;
 .answer-container:hover {
     cursor: pointer;
     box-shadow: 0.2rem 0.2rem 0.313rem 0.375rem var(--color5);
-    transform: scale(1.5);
+   
 }
 
 .answer-prefix {
