--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -5,9 +5,9 @@ video guidance was adapted to suit my needs for the site. Also trying using vari
 
  Color 1 - Background 
  Color 2 - Text 
- Color 3 - Incorrect Answer 
+ Color 3 - Question box  
  Color 4 - Boxes 
- Color 5 - Correct Answer
+ Color 5 - Answer box shadow
 
 */
 :root {
