--- a/assets/CSS/game.css
+++ b/assets/CSS/game.css
@@ -53,15 +53,6 @@ justify-content: center;
     width: 66%;
 }
 
-.correct {
-    background: var(--color5);
-
-}
-
-.incorrect {
-    background: var(--color3);
-    
-}
 
 /* hud styles */
 
@@ -74,7 +65,8 @@ justify-content: center;
     border-radius: 4px;
     background: var(--color4);
     align-items: center;
-    margin:auto;
+    margin: auto;
+    margin-top: 16em;
     flex-direction: column;
 
 }
