--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -53,10 +53,10 @@ text-align: center;
 display: flex;
 align-items: center;
 padding: 2em;
-margin-top: 16px;
-margin-bottom: 16px;
+margin-top: 1em;
+margin-bottom: 1em;
 width: 66%;
-border-radius: 4px;
+border-radius: 0.25em;
 background: var(--color3);
 min-width: 20em;
 min-height: 5em;
@@ -69,11 +69,11 @@ justify-content: center;
 
 .answer-container {
 
-margin: 16px;
-margin-bottom: 16px;
+margin: 1em;
+margin-bottom: 1em;
 margin-left: 2em;
 padding: 2em;
-border-radius: 4px;
+border-radius: 0.25em;
 background: var(--color4);
 min-width: 20%;
 max-height: 5em;
@@ -92,12 +92,12 @@ text-align: center;
 
 
 .answer-prefix {
-    padding: 32px 36px;
+    padding: 2em 2em;
     color: var(--color4);
 }
 
 .answer-text {
-    padding: 32px;
+    padding: 2em;
     width: 66%;
 }
 
@@ -108,9 +108,9 @@ text-align: center;
     display: flex;
     justify-content: center;
     width: 33%;
-    margin-bottom: 64px;
+    margin-bottom: 4em;
     
-    border-radius: 4px;
+    border-radius: 0.25em;
     background: var(--color4);
     align-items: center;
     margin: auto;
@@ -128,12 +128,12 @@ text-align: center;
 
 #progress-bar {
     width: 66%;
-    height: 48px;
-    border: 6px solid var(--color4);
-    margin-top: 32px;
-    border-radius: 50px;
+    height: 3em;
+    border: 0.375em solid var(--color4);
+    margin-top: 2em;
+    border-radius: 3.125em;
     overflow: hidden;
-    margin-bottom: 32px;
+    margin-bottom: 2em;
 
 }
 
