--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,7 +90,7 @@ p   {color: var(--color4)}
 }
 
 .btn {
-    font-size: 2.4;
+    font-size: 2.4em;
     padding: 2em 0em;
     width: 30em;
     margin: 2em;
@@ -175,3 +175,42 @@ p   {color: var(--color4)}
 }
 
 
+@media screen and (max-width: 480px) {
+
+.container {
+    max-width: 100%;
+    font-size: 1.5em;
+
+}
+
+header {
+    font-size: 1.5em;
+    margin-top: 2em;
+}
+
+h2 {
+    font-size: 1em;
+    text-align: center;
+    color: var(--color4);
+    margin: 0.2em;
+}
+
+.btn {
+    font-size: 1.5em;
+    padding: 0.25em 0em;
+    width: 33%;
+    margin: 0.2em;
+    text-decoration: underline;
+    color: var(--color4);
+    text-align: center;
+    border: 0.125em solid;
+    border-color: var(--color4);
+}
+
+.fa-message {font-size: 1em;
+    margin-left: 1em;
+}
+
+
+
+}
