--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ video guidance was adapted to suit my needs for the site. Also trying using vari
 header {
     font-size: 2em;
     font-weight: 900;
-    margin: 0;
+    margin-top: 2.5em;
     color: var(--color4);
     text-shadow: 0.125em 0.125em 0.25em rgba(204, 163, 0, 0.1),
     1.33em 0.25em 0.25em rgba(204, 163, 0, 0.15),
@@ -90,15 +90,16 @@ p   {color: var(--color4)}
 }
 
 .btn {
-    font-size: 2.4em;
-    padding: 2em 0em;
-    width: 30em;
-    margin: 2em;
+    font-size: 2em;
+    padding: 1em 0em;
+    width: 75%;
+    margin: 0.5em;
     text-decoration: underline;
     color: var(--color4);
     text-align: center;
     border: 0.125em solid;
     border-color: var(--color4);
+    border-radius: 50%;
 
 }
 
@@ -107,7 +108,7 @@ p   {color: var(--color4)}
   -webkit-transition: 1s ease;
 }
 
-.fa-message {font-size: 2.4em;
+.fa-message {font-size: 1em;
              margin-left: 1em;
 }
 
