--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,6 +212,67 @@ h2 {
     margin-left: 1em;
 }
 
+.modal-style { position: fixed;
+    top: 0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--color2);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0.5s ease, opacity 0.5s ease;
+
+
+
+}
+
+
+.con-active {
+visibility:visible;
+opacity: 1;
+}
+
+.modal {
+position: relative;
+height: 80%;
+width: 50%;
+padding: 1rem;
+display: flex;
+justify-content: center;
+flex-direction: column;
+justify-content: space-around;
+background-color: var(--color2);
+}
+
+.modal-close{
+position: absolute;
+top: 0.625em;
+right: 0.625em;
+}
+
+.modal-close:hover {
+
+color: var(--color4);
+cursor: pointer;
+
+}
+
+.modal-close-rules {
+position: absolute;
+top: 0.625em;
+right: 0.625em;
+}
+
+.modal-close-rules:hover {
+
+color: var(--color4);
+cursor: pointer;
+
+}
+
 
 
 }
