--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,6 +175,10 @@ p   {color: var(--color4)}
     
 }
 
+.space-below {
+    padding-bottom: 0.5em;
+}
+
 
 @media screen and (max-width: 480px) {
 
