--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -68,7 +68,7 @@ justify-content: center;
 /* Answers boxes styles  */
 
 .answer-container {
-
+display: flex;
 margin: 1em;
 margin-bottom: 1em;
 margin-left: 2em;
@@ -77,7 +77,7 @@ border-radius: 0.25em;
 background: var(--color4);
 min-width: 20%;
 max-height: 5em;
-text-align: center;
+justify-content: center;
 
 }
 
@@ -97,8 +97,11 @@ text-align: center;
 }
 
 .answer-text {
-    padding: 2em;
+    display: flex;
+    align-items: center;
+    padding: 1em;
     width: 66%;
+    justify-content: center;
 }
 
 
@@ -108,13 +111,10 @@ text-align: center;
     display: flex;
     justify-content: center;
     width: 33%;
-    margin-bottom: 4em;
-    
     border-radius: 0.25em;
     background: var(--color4);
     align-items: center;
-    margin: auto;
-    margin-top: 10em;
+    margin-top: 5em;
     flex-direction: column;
 
 }
@@ -150,7 +150,7 @@ text-align: center;
         display: flex;
         width:100vh;
         margin: 0 auto;
-        text-align: center;
+        justify-content: center;
         color: var(--color4);
     }
     
@@ -167,7 +167,7 @@ text-align: center;
         background: var(--color4);
         align-items: center;
         margin: auto;
-        margin-top: 25em;
+        margin-top: 19em;
         flex-direction: column;
     
     }
@@ -176,5 +176,35 @@ text-align: center;
     padding: 0;
 }
 
+.question-container {
+
+    display: flex;
+    align-items: center;
+    padding: 1em;
+    margin-top: 1em;
+    width: 66%;
+    border-radius: 0.25em;
+    background: var(--color3);
+    min-width: 20em;
+    min-height: 5em;
+    text-align: center;
+    justify-content: center;
+    
+    }
+
+    .answer-container {
+
+        display: flex;
+        margin: 1em;
+        margin-bottom: 1em;
+        margin-left: 2em;
+        padding: 2em;
+        border-radius: 0.25em;
+        background: var(--color4);
+        min-width: 20%;
+        max-height: 3.5em;
+        justify-content: center;
+        }
+    
 
 }
