--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -123,6 +123,9 @@ justify-content: center;
     color: var(--color2);
 }
 
+
+
+
 /* guidance on progress bars was taken from youtube video - https://www.youtube.com/watch?v=f4fB9Xg2JEY  and adapted for my project*/
 
 
@@ -146,12 +149,16 @@ justify-content: center;
 
 @media screen and (max-width: 480px){
 
+    
+
     .heading  {
         display: flex;
         width:100vh;
         margin: 0 auto;
         justify-content: center;
         color: var(--color4);
+        position: absolute;
+        top: 0;
     }
     
 
@@ -167,8 +174,9 @@ justify-content: center;
         background: var(--color4);
         align-items: center;
         margin: auto;
-        margin-top: 19em;
+        margin-top: 25em;
         flex-direction: column;
+        position: relative;
     
     }
 
@@ -205,6 +213,19 @@ justify-content: center;
         max-height: 3.5em;
         justify-content: center;
         }
+
+        .modal-rules {
+     
+    height: 100%;
+    width: 100%;
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    color: black;
+    background-color: var(--color2);
+}
+        }
     
 
-}
+
