--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -4,10 +4,15 @@
 body {color: var(--color2);
 }
 
-.heading  {width:100vh;
+.heading  {
+    display: flex;
+    width:100vh;
     margin: 0 auto;
-    text-align: center;
-    color: var(--color4)}
+    justify-content: center;
+    color: var(--color4);
+    position: absolute;
+    top: 0;
+}
 
 .fa-house {font-size: 2em;  
           color: var(--color4);
@@ -114,9 +119,9 @@ justify-content: center;
     border-radius: 0.25em;
     background: var(--color4);
     align-items: center;
-    margin-top: 5em;
+    margin-top: 10em;
     flex-direction: column;
-
+    position: relative;
 }
 
 .hud-main-text{
