--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -6,7 +6,7 @@ body {color: var(--color2);
 
 .heading  {
     display: flex;
-    width:100vh;
+    width:100%;
     margin: 0 auto;
     justify-content: center;
     color: var(--color4);
@@ -158,7 +158,7 @@ justify-content: center;
 
     .heading  {
         display: flex;
-        width:100vh;
+        width:100%;
         margin: 0 auto;
         justify-content: center;
         color: var(--color4);
