--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -234,6 +234,7 @@ justify-content: center;
 flex-direction: column;
 justify-content: space-around;
 background-color: var(--color2);
+color: black;
 }
 
 .modal-close{
