--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -22,10 +22,8 @@ body {color: var(--color2);
 }
 
 .fa-house:hover {font-size: 2.5em;
-                 -webkit-transition: 0.2s ease;}
-
-
-
+                 -webkit-transition: 0.2s ease;
+}
 
 .game-page {
 display: flex;
@@ -50,51 +48,41 @@ text-align: center;
     width: 100%;
 }
 
-
-
-
 .question-container {
-
-display: flex;
-align-items: center;
-padding: 2em;
-margin-top: 1em;
-margin-bottom: 1em;
-width: 66%;
-border-radius: 0.25em;
-background: var(--color3);
-min-width: 20em;
-min-height: 5em;
-text-align: center;
-justify-content: center;
-
+    display: flex;
+    align-items: center;
+    padding: 2em;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    width: 66%;
+    border-radius: 0.25em;
+    background: var(--color3);
+    min-width: 20em;
+    min-height: 5em;
+    text-align: center;
+    justify-content: center;
+    font-size: x-large;
 }
 
 /* Answers boxes styles  */
 
 .answer-container {
-display: flex;
-margin: 1em;
-margin-bottom: 1em;
-margin-left: 2em;
-padding: 2em;
-border-radius: 0.25em;
-background: var(--color4);
-min-width: 20%;
-max-height: 5em;
-justify-content: center;
-
+    display: flex;
+    margin: 1em;
+    margin-bottom: 1em;
+    margin-left: 2em;
+    padding: 2em;
+    border-radius: 0.25em;
+    background: var(--color4);
+    min-width: 20%;
+    max-height: 5em;
+    justify-content: center;
 }
 
 .answer-container:hover {
     cursor: pointer;
-    box-shadow: 0.2rem 0.2rem 0.313rem 0.375rem var(--color5);
-   
+    box-shadow: 0.2rem 0.2rem 0.313rem 0.375rem var(--color5);  
 }
-
-
-
-
 
 .answer-prefix {
     padding: 2em 2em;
@@ -107,8 +95,8 @@ justify-content: center;
     padding: 1em;
     width: 66%;
     justify-content: center;
+    font-size: large;
 }
-
 
 /* hud styles */
 
@@ -119,7 +107,7 @@ justify-content: center;
     border-radius: 0.25em;
     background: var(--color4);
     align-items: center;
-    margin-top: 10em;
+    margin-top: 5em;
     flex-direction: column;
     position: relative;
 }
@@ -128,139 +116,70 @@ justify-content: center;
     color: var(--color2);
 }
 
-
-
-
-
-
 /* Answer pop ups */
 
-.answer-indicator
-    {
-        top: 60%;
-        left: 45%;
-        width: 30em;
-        height: 18em;
-        margin-left: -9em;
-        margin-top: -15em;
-        position: fixed;
-        display:flex;
-        justify-content: center;
-        align-items: center;
-        visibility: hidden;
-        
-    }
+.answer-indicator{
+    top: 60%;
+    left: 45%;
+    width: 30em;
+    height: 18em;
+    margin-left: -9em;
+    margin-top: -15em;
+    position: fixed;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;   
+}
 
-    .tick {
-
-        color: green;
-        font-size: 8rem;
-        background: orange;
-
-
-
-    }
-
+.tick {
+    color: green;
+    font-size: 8rem;
+    background: var(--color1);
+}
 
     .cross {
         color: red;
         font-size: 8rem;
-        background: orange;
-    }
+        background: var(--color1);
+}
 
     .visible {
         visibility: visible;
         opacity: 1;
         transition: opacity 0.5s linear;
-    }
+}
 
     .hidden {
         visibility: hidden;
         opacity: 0;
         transition: visibility 0s 2s, opacity 2s linear;
-    }
+}
         
-    
-
-
-
 @media screen and (max-width: 480px){
 
-    
-
-    .heading  {
-        display: flex;
-        width:100%;
-        margin: 0 auto;
-        justify-content: center;
-        color: var(--color4);
-        position: absolute;
-        top: 0;
-    }
-    
-
-
-
     .hud-item {
-        display: flex;
-        justify-content: center;
-        width: 33%;
         margin-bottom: 4em;
-        
-        border-radius: 0.25em;
-        background: var(--color4);
         align-items: center;
         margin: auto;
         margin-top: 25em;
         flex-direction: column;
-        position: relative;
-    
-    }
-
-.space-below {
-    padding: 0;
+        position: relative;   
 }
 
-.question-container {
+    .space-below {
+        padding: 0;
+}
 
-    display: flex;
-    align-items: center;
-    padding: 1em;
-    margin-top: 1em;
-    width: 66%;
-    border-radius: 0.25em;
-    background: var(--color3);
-    min-width: 20em;
-    min-height: 5em;
-    text-align: center;
-    justify-content: center;
-    
-    }
+    .question-container {
+        padding: 1em;
+        min-width: 20em;
+        min-height: 5em;   
+}
 
     .answer-container {
-
-        display: flex;
-        margin: 1em;
-        margin-bottom: 1em;
-        margin-left: 2em;
-        padding: 2em;
-        border-radius: 0.25em;
-        background: var(--color4);
-        min-width: 20%;
         max-height: 3.5em;
         justify-content: center;
-        }
-
-        .modal-rules {
-     
-    height: 100%;
-    width: 100%;
-    padding: 1rem;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    color: black;
-    background-color: var(--color2);
 }
 
 .answer-indicator
