--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -7,7 +7,7 @@ body {color: var(--color2);
 .heading  {
     display: flex;
     width:100%;
-    margin: 0 auto;
+    margin: 5em;
     justify-content: center;
     color: var(--color4);
     position: absolute;
