feat: improve accessibility remove font awesome home icon replace with text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ video guidance was adapted to suit my needs for the site. Also trying using vari
     font-size: 1em;
     width: 100%;
     --color1: #ffbe0b;
-    --color2: #FFD86E;
+    --color2: #ffff00;
     --color3: #ff006e;
     --color4: #8338ec;
     --color5: #3a86ff;
