--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,7 +104,8 @@ h2 {
     left: 0;
     width: 100%;
     height: 100vh;
-    background-color: var(--color2);
+    background-color: var(--color1);
+    color: var(--color4);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -127,7 +128,7 @@ h2 {
     justify-content: center;
     flex-direction: column;
     justify-content: space-around;
-    background-color: white;
+    background-color: #ffff00;
 }
 
 .modal-close {
