--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,7 +140,14 @@ h2 {
 .modal-close:hover {
     color: var(--color4);
     cursor: pointer;
+}
 
+textarea {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    background-color: #FDE3AF;
+    width: 100%;
 }
 
 .modal-close-rules {
