--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,7 +128,9 @@ h2 {
     justify-content: center;
     flex-direction: column;
     justify-content: space-around;
-    background-color: #ffff00;
+    background-color: var(--color1);
+    border: 2px solid var(--color4);
+    font-weight: bold;
 }
 
 .modal-close {
@@ -148,6 +150,17 @@ textarea {
     box-sizing: border-box;
     background-color: #FDE3AF;
     width: 100%;
+}
+
+button {
+    background-color: var(--color4);
+    color: var(--color1);
+}
+
+button:hover {
+    background-color: var(--color1);
+    color: var(--color4);
+    -webkit-transition: 1s ease;
 }
 
 .modal-close-rules {
@@ -205,7 +218,7 @@ textarea {
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: var(--color2);
+        background-color: var(--color1);
         display: flex;
         justify-content: center;
         align-items: center;
@@ -228,8 +241,7 @@ textarea {
         justify-content: center;
         flex-direction: column;
         justify-content: space-around;
-        background-color: var(--color2);
-        color: black;
+             
     }
 
     .modal-close {
